# IceCreamBrawl

./: .gitignore  CMakeLists.txt  build.sh  build_android.sh  my-app-release.apk.idsig  scrit.sh
android_files/: build_android_cmake.sh
src/: defines.h  levelDatabase.hpp  main.cpp
src/combat/: combatSystem.cpp  combatSystem.hpp  healthSystem.cpp  healthSystem.hpp
src/defines/: defines_general.h  defines_player.h  defines_screen.h  defines_ui.h  events.hpp
src/defines/components/: components.hpp  entityComponents.hpp
src/enemies/: enemyFactory.hpp  enemyScripts.hpp  enemyStatus.cpp  enemyStatus.hpp
src/enemies/systems/: enemyAttackSystem.cpp  enemyAttackSystem.hpp  enemyMovementSystem.cpp  enemyMovementSystem.hpp  enemySpawnSystem.cpp  enemySpawnSystem.hpp
src/engine/: assetManager.cpp  assetManager.hpp  engine.cpp  engine.hpp  gameDataManager.cpp  gameDataManager.hpp  gameDataTypes.hpp  gameplayRuntime.cpp  gameplayRuntime.hpp  playerRebindingService.cpp  playerRebindingService.hpp  screenManager.cpp  screenManager.hpp
src/engine/components/: components.hpp  entityComponents.hpp
src/engine/scripts/: script.hpp
src/engine/scripts/button/: buttons.hpp
src/engine/scripts/controller/: controllerFactory.hpp
src/engine/scripts/entities/: entityAttack.hpp  entityMovement.hpp  entityRegen.hpp  entityStatus.cpp  entityStatus.hpp
src/engine/scripts/entities/enemy/: enemyAttack.hpp  enemyScripts.hpp
src/engine/scripts/entities/player/: playerFactory.hpp  playerScripts.hpp  primaryAttack.hpp
src/engine/scripts/general/: buttons.hpp  controller.hpp
src/engine/scripts/map/: mapFactory.hpp
src/engine/scripts/player/: buttons.hpp  controller.hpp  playerScripts.hpp  playerStatus.hpp  primaryAttack.hpp
src/engine/scripts/ui/buttons/: buttons.cpp  buttons.hpp
src/engine/scripts/ui/buttons/pauseButton/: pauseButton.cpp  pauseButton.hpp
src/engine/scripts/ui/controller/: controller.cpp  controller.hpp  controllerFactory.hpp
src/engine/scripts/ui/minimap/: minimap.hpp  minimapFactory.hpp
src/entities/: entityAttack.hpp  entityDatabase.hpp  entityMovement.hpp  entityRegen.hpp  entityStatus.cpp  entityStatus.hpp
src/entities/enemy/: enemyAttack.hpp  enemyScripts.hpp
src/entities/player/: playerFactory.hpp  playerScripts.hpp
src/input/: inputSystem.cpp  inputSystem.hpp
src/map/: mapFactory.hpp
src/player/: playerFactory.hpp  playerScripts.hpp  playerStatus.cpp  playerStatus.hpp
src/screens/: screen.cpp  screen.hpp
src/screens/game/: deathScreen.cpp  deathScreen.hpp  gameScreen.cpp  gameScreen.hpp  pauseButton.cpp  pauseButton.hpp
src/screens/pause/: pauseScreen.cpp  pauseScreen.hpp
src/skills/: skillsDatabase.hpp
src/ui/: uiDatabase.hpp
src/ui/buttons/: buttons.cpp  buttons.hpp
src/ui/buttons/abilityButton/: abilityButton.hpp  abilityButtonFactory.hpp
src/ui/buttons/attackButton/: attackButton.hpp  attackButtonFactory.hpp
src/ui/buttons/pauseButton/: pauseButton.cpp  pauseButton.hpp  pauseButtonFactory.hpp
src/ui/controller/: controller.cpp  controller.hpp  controllerFactory.hpp
src/ui/minimap/: minimap.cpp  minimap.hpp  minimapFactory.hpp
src/utils/: gamepadSupport.h  logs.h
